css/styles.css
/* DARK MODE */

.dark-mode .top-container{
    background-color: #232931;
}
.dark-mode .middle-container
{
    background-color: #393e46;
}
.dark-mode .navbar
{
    background-color: #232931;
}
.dark-mode .bottom-container
{
    background-color: #232931;
}
.dark-mode h1
{
    color:#4ecca3;
}
.dark-mode h2
{
    color: #4ecca3;
}
.dark-mode h3
{
    color: #4ecca3;
}
.dark-mode p{
    color:#eeeeee;
}
.dark-mode span{
    color:#eeeeee;
}
.dark-mode .dark
{
    color: white;
}
.dark-mode hr
{
    color: #4ecca3;
}
.dark-mode .btn-default
{
    background-color: #4ecca3;
}
.dark-mode i
{
    color: #4ecca3;
}
.dark-mode .mail
{
    color: #eeeeee;
}
/* DARK MODE CSS ENDS */

body
{
    font-family: 'Merriweather', serif;
    text-align: center;
    color: #40514e;
}
.navbar
{
    background-color:#e4f9f5;
}
h1
{
    font-size: 562.5%;
    margin:10% auto 0 auto;
    font-family: 'Sacramento', cursive;
    color:#30e3ca;
    line-height: 80%;
}
h2
{
    font-weight: bolder;
    font-family: "bungee shade";
    font-size: 200%;
    margin: 1.875rem auto 1rem auto;
    color: #11999e;
    padding-bottom: 10px;
}
h3
{
    font-weight: bold;
    font-size: 1.2rem;
    display: inline-block;
    font-family: "biorhyme";
    color: #11999E;
}
p
{
    font-weight: lighter;
    font-family: "biorhyme";
    line-height: 2;
}
span
{
    color:#40514e;
}
.top-container
{
    background-color:#e4f9f5;
    position: relative;
    padding:2rem 0;
    margin-top:3rem;
}
.top-cloud
{
    position: absolute;
    top: 1.875rem;
    left: 80%;
    width:15%;
    
}
.bottom-cloud
{  
    position: absolute;
    left: 10%;
    bottom: 20%;
    width: 15%;
}
.mountain
{
    width: 55%;
}
a
{
    color: #11999E;
    font-family: 'Montserrat',sans-serif;
    padding: 5px 20px 10px 20px;
}
a:hover
{
     color: #EAF6F6;
}
.subtitle
{
    font-weight: normal;
}
.skill-row
{
    margin:20px auto;
    width: 80%;
    text-align: left;
    line-height: 2;
}
.skill-image-1
{
    width: 10%;
    float: left;
    margin-right: 30px;
}
.skill-image-2
{
    width: 10%;
    float: right;
    margin-right: 30px;
}
.middle-container
{
    padding: 50px 0;
}
hr
{
    border: dotted;
    border-top: none;
    width: 5%;
    color: #11999e; 
    border-width: 6px;
    margin: 100px auto 100px auto;
}
.bottom-container
{
    background-color: #40514e;
    padding-top: 50px;
    padding-bottom: 20px;
}
.copyright
{
    color: #EAF6F6;
    font-size: 0.75rem;
    padding: 20px 0;
}
.fab
{
    color:#11999e;
}
.fab:hover
{
    color: #e4f9f5;
}
.btn-default
{
    background-color: #11999e;
    color:#e4f9f5;
}
.btn-default:hover
{
    color: #11999e;
    background-color:#40514e;
}
.dark
{
    position: fixed;
    left: 90%;
    top: 90%;
}

